# NetLab1

./: Cargo.toml  README.md  configure.bat  configure.sh
client/: Cargo.toml  test.txt
client/src/: chars_reader.rs  commands.rs  connection.rs  lib.rs
server/: Cargo.toml
server/src/: connection.rs  lib.rs
shared/: Cargo.toml
shared/src/: capped_reader.rs  communication.rs  connection.rs  errors.rs  helpers.rs  lib.rs  ref_cell_stream.rs  safe_map.rs  shared.rs  shared_map.rs  shared_streams.rs
shared/src/communication/: arson.rs  bson.rs  json.rs  xxson.rs
shared/src/communication/xxson/: connection.rs  messages.rs  sharers.rs
shared/src/connection/: helpers.rs  messages.rs  sharers.rs
shared/src/helpers/: capped_reader.rs  shared.rs
