[package]
name = "server"
version = "0.1.0"
edition = "2018"

[lib]
name = "server"

[[bin]]
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde_json = "1.0"
bson = "2.0"
chrono = "0.4"
